--- a/templates/landingpage/index.html
+++ b/templates/landingpage/index.html
@@ -51,10 +51,9 @@
         </div>
 
         <div class="carousel-item">
-            <img class="third-slide"
+            <img class="second-slide"
                  src="{% static 'landingpage/images/bg_4.jpg' %}"
-                 alt="Third slide">
-			<div class="blur-bg"></div>
+                 alt="second slide">
             <div class="container">
                 <div class="carousel-caption justify-content-center d-flex h-50 d-md-block text-left">
                     <h1>Admission Staff</h1>
@@ -68,7 +67,6 @@
             <img class="third-slide"
                  src="{% static 'landingpage/images/bg_4.jpg' %}"
                  alt="Third slide">
-{#            <div class="blur-bg"></div>#}
             <div class="container">
                 <div class="carousel-caption justify-content-center d-flex h-50 d-md-block text-left">
                     <h1>Teacher and Mentor</h1>
@@ -93,14 +91,6 @@
 <!-- Wrap the rest of the page in another container to center all the content. -->
 
 <div class="container marketing">
-
-    <!-- Three columns of text below the carousel -->
-
-
-    <!-- START THE FEATURETTES -->
-
-    <!--<hr class="featurette-divider">-->
-
     <div class="row featurette ">
         <div class="col-md-7">
             <h2 class="featurette-heading">Student</h2>
