--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -1,5 +1,7 @@
 
 {% load staticfiles %}
+<!DOCTYPE html>
+<html lang="en">
 <!-- Bootstrap core CSS -->
 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
@@ -73,3 +75,4 @@
     <a href="#">Back to top</a>
   </p>
 </footer>
+</html>
