--- a/admissions/templates/admissions/detail.html
+++ b/admissions/templates/admissions/detail.html
@@ -1,20 +1,75 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Show application here</title>
+    <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
+    <title>Application Form</title>
+    <h5 style="margin: 1.5em; text-align: center;"><b>Application Form</b></h5>
 </head>
 <body>
+<table class="table table-striped" style="border: 1px solid black; border-collapse:
+inherit; width: 75%; margin: 0 auto 2em;">
+    <tbody>
+    {% if application %}
+        <tr>
+            <th scope="row">Application Number</th>
+            <td>{{ application.application_number }}</td>
+        </tr>
+        <tr>
+            <th scope="row">First Name</th>
+            <td>{{ application.first_name }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Last Name</th>
+            <td colspan="2">{{ application.last_name }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Email Address</th>
+            <td>{{ application.email_address }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Phone Number</th>
+            <td>{{ application.phoneNumber }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Address</th>
+            <td>{{ application.address }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Gender</th>
+            <td>{{ application.gender }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Date of Birth</th>
+            <td>{{ application.date_of_birth }}</td>
+        </tr>
+        <tr>
+            <th scope="row">GPA</th>
+            <td>{{ application.gpa }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Parent/Guardian Name</th>
+            <td>{{ application.parent_name }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Parent/Guardian Phone Number</th>
+            <td>{{ application.parent_phoneNumber }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Program Name</th>
+            <td colspan="2">{{ application.program }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Date of Submission</th>
+            <td colspan="2">{{ application.submitted_date }}</td>
+        </tr>
+    {% else %}
+        <p>No applications are available.</p>
+    {% endif %}
+    </tbody>
+</table>
 
-{% if application %}
-    <ul>
-        <li>{{ application.application_id }}</li>
-        <li>{{ application.first_name }}</li>
-        <li>{{ application.program_name }}</li>
-        <li>{{ application.date_of_submission }}</li>
-    </ul>
-{% else %}
-    <p>No applications are available.</p>
-{% endif %}
 </body>
 </html>
