--- a/admissions/templates/admissions/index.html
+++ b/admissions/templates/admissions/index.html
@@ -1,16 +1,43 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
     <title>Display Applications</title>
 </head>
 <body>
 {% if applications %}
     {% for app in applications %}
-        <a href="{% url 'admissions:detail' app.application_id %}">{{ app.first_name }}</a>
+        <div class="card" style="margin: 3em 17em;">
+            <div class="card-header"><b>
+                {{ app.first_name }} {{ app.last_name }}
+                <span style="float: right">{{ app.application_number }}
+                    </span>
+            </b>
+            </div>
+            <div class="card-body">
+                <div class="card-text" style="align-items: center;">
+                    <p>
+                        Program: {{ app.program }}
+                        <span style="float: right">
+                            <a href="{% url 'admissions:detail' app.id %}"
+                               class="btn btn-primary"
+                            >View Application</a>
+                        </span>
+                    </p>
+                    <footer class="blockquote-footer"
+                            style="margin-top:1em;">Date of Submission:
+                        {{ app.submitted_date }}
+                    </footer>
+                </div>
+            </div>
+        </div>
+        </div>
     {% endfor %}
 {% else %}
     <p>No applications are available.</p>
 {% endif %}
+
 </body>
 </html>
