--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -24,8 +24,8 @@
 
     </ul>
  
- 	<a class="nav-link" href ='#'>profile</a>  
- 	<a class="nav-link" href ="{% url 'landingpage:index' %}">logout</a>
+ 	<a class="nav-link" href ='#'>Profile</a>  
+ 	<a class="nav-link" href ="{% url 'landingpage:index' %}">Logout</a>
 
   </div>
  </nav>
@@ -34,8 +34,8 @@
   	{% if user_type == constant_ut_student %}
     <nav class="nav d-flex justify-content-between">
       <a class="p-2 text-muted active" href="#selected_schools" data-toggle="tab">Selected Schools</a>
-      <a class="p-2 text-muted" href="#all_schools" data-toggle="tab">All schools</a>
-      <a class="p-2 text-muted" href="#application_forms" data-toggle="tab">Application forms</a>
+      <a class="p-2 text-muted" href="#all_schools" data-toggle="tab">All Schools</a>
+      <a class="p-2 text-muted" href="#application_forms" data-toggle="tab">Application Forms</a>
       <a class="p-2 text-muted" href="#teacher_recommendations" data-toggle="tab">Teacher Recommendations</a>
     </nav>
     {% elif user_type == constant_ut_adminStaff %}
