--- a/admissions/templates/admissions/detail.html
+++ b/admissions/templates/admissions/detail.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <title>Application Form</title>
     <h5 style="margin: 1.5em; text-align: center;"><b>Application Form</b></h5>
 </head>
@@ -66,7 +66,7 @@ inherit; width: 75%; margin: 0 auto 2em;">
             <td colspan="2">{{ application.submitted_date }}</td>
         </tr>
     {% else %}
-        <p>No applications are available.</p>
+        <p>The application you are looking for doesn't exist.</p>
     {% endif %}
     </tbody>
 </table>
