--- a/admissions/templates/admissions/index.html
+++ b/admissions/templates/admissions/index.html
@@ -1,11 +1,5 @@
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
-    <title>Display Applications</title>
-</head>
+<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 <body>
 {% if applications %}
     {% for app in applications %}
@@ -33,11 +27,9 @@
                 </div>
             </div>
         </div>
-        </div>
     {% endfor %}
 {% else %}
     <p>No applications are available.</p>
 {% endif %}
 
 </body>
-</html>
