--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
+<head>
 <!-- Bootstrap core CSS -->
 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
@@ -13,7 +14,9 @@
 
 <script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-
+<title>OneApply</title>
+</head>
+<body>
   <nav class="navbar navbar-expand-md navbar-dark bg-primary mb-4">
   	<a class="navbar-brand" href="#">OneApply</a>
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -75,4 +78,5 @@
     <a href="#">Back to top</a>
   </p>
 </footer>
+</body>
 </html>
