Integrate admissions dashboard to main dashboard

--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -64,14 +64,8 @@
     </div>
 </div>
 {% elif user_type == constant_ut_adminStaff %}
- <div id="myTabContent" class="tab-content">
-    <div class = "active tab-pane" id="student_applications">
- 	    <h1>Hello, this is student applications page</h1>
-    </div>
-    <div class = "tab-pane" id="school_informations">
-        <h1>Hello, this is school informations page</h1>
-    </div>
-</div>
+    {% block content %}
+    {% endblock %}
 {% endif %}
 <footer class="blog-footer">
   <p>
