--- a/admissions/templates/admissions/index.html
+++ b/admissions/templates/admissions/index.html
@@ -1,35 +1,34 @@
-{% load static %}
-<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-<body>
-{% if applications %}
-    {% for app in applications %}
-        <div class="card" style="margin: 3em 17em;">
-            <div class="card-header"><b>
-                {{ app.first_name }} {{ app.last_name }}
-                <span style="float: right">{{ app.application_number }}
+{% extends "dashboard/index.html" %}
+{% block content %}
+    {% load static %}
+    {% if applications %}
+        {% for app in applications %}
+            <div class="card" style="margin: 3em 17em;">
+                <div class="card-header"><b>
+                    {{ app.first_name }} {{ app.last_name }}
+                    <span style="float: right">{{ app.application_number }}
                     </span>
-            </b>
-            </div>
-            <div class="card-body">
-                <div class="card-text" style="align-items: center;">
-                    <p>
-                        Program: {{ app.program }}
-                        <span style="float: right">
-                            <a href="{% url 'admissions:detail' app.id %}"
+                </b>
+                </div>
+                <div class="card-body">
+                    <div class="card-text" style="align-items: center;">
+                        <p>
+                            Program: {{ app.program }}
+                            <span style="float: right">
+                            <a href="{% url 'dashboard:admissions:detail' app.id %}"
                                class="btn btn-primary"
                             >View Application</a>
                         </span>
-                    </p>
-                    <footer class="blockquote-footer"
-                            style="margin-top:1em;">Date of Submission:
-                        {{ app.submitted_date }}
-                    </footer>
+                        </p>
+                        <footer class="blockquote-footer"
+                                style="margin-top:1em;">Date of Submission:
+                            {{ app.submitted_date }}
+                        </footer>
+                    </div>
                 </div>
             </div>
-        </div>
-    {% endfor %}
-{% else %}
-    <p>No applications are available.</p>
-{% endif %}
-
-</body>
+        {% endfor %}
+    {% else %}
+        <p>No applications are available.</p>
+    {% endif %}
+{% endblock %}
