dashboard redirection bug fix

--- a/logIn/templates/logIn/index.html
+++ b/logIn/templates/logIn/index.html
@@ -1,3 +1,10 @@
+{#Todo: remove these comment post successful integration of application#}
+{#{% extends 'dashboard/index.html' %}#}
+{#{% block testing %}#}
+{# extend dashboard/index.html in your application app#}
+{# declare a block and enclose the entire file inside that block, including your scripts#}
+{# block name should be the same as declared in dashboard/index.html (check for more)#}
+{# remove comment from eof also - below #}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'logIn/css/login.css' %}">
@@ -55,3 +62,5 @@
 </div>
 
 </body>
+{#{% endblock %}#}
+{#todo: remove this post successful integration of applications app#}
