--- a/application/templates/application/application-form.html
+++ b/application/templates/application/application-form.html
@@ -1,13 +1,15 @@
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'register/css/register.css' %}">
-<script src="{% static 'js/datepicker.js' %}"></script>
+{% extends 'dashboard/index.html' %}
 
-<body>
-{% block content %}
-    <h2>High School Application Form</h2>
-    <form action="{% url 'application:draftApplication' user_id %}" method="post" class="form-signup" style="padding-top: 100px;">
-                {% csrf_token %}
+{% block apply_form %}
+
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'register/css/register.css' %}">
+
+    <body>
+        <h2>High School Application Form</h2>
+        <form action="{% url 'dashboard:application:draftApplication' user_type user_id %}" method="post" class="form-signup" style="padding-top: 100px;">
+            {% csrf_token %}
                 <div class="form-row">
                     <div class="form-label-group col-md-6">
                         {{ form.first_name }}
@@ -109,5 +111,6 @@
                 <input class="btn btn-lg btn-primary btn-block" type="submit" value="Save as Draft" name="draft"/>
                 <input class="btn btn-lg btn-primary btn-block" type="submit" value="Submit" name="submit"/>
             </form>
+        </body>
+
 {% endblock %}
-</body>
