--- a/application/templates/application/index.html
+++ b/application/templates/application/index.html
@@ -1,11 +1,15 @@
-{% block application_form_content %}
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'application/css/application.css' %}">
-<script src="https://kit.fontawesome.com/fc24e2383c.js" crossorigin="anonymous"></script>
-<div class="all-app-root">
-    <div class="container-fluid">
-        <div class="row">
+{% extends 'dashboard/index.html' %}
+
+{% block all_applications %}
+
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'application/css/application.css' %}">
+    <script src="https://kit.fontawesome.com/fc24e2383c.js" crossorigin="anonymous"></script>
+
+    <div class="all-app-root">
+        <div class="container-fluid">
+            <div class="row">
                 <div class="col-md-6 left-pane">
                     {% block app_list %}
                         {% include 'application/application-list.html' %}
@@ -16,6 +20,8 @@
                         {% include 'application/application-overview.html' %}
                     {% endblock %}
                 </div>
+            </div>
+        </div>
     </div>
-</div>
+
 {% endblock %}
