--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -7,14 +7,6 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static 'dashboard/blog.css' %}" rel="stylesheet">
-
-    <!--script-->
-    {#  commented scripts below because all_schools functionality fails with jquery  #}
-    {#  TODO: check this in a later sprint  #}
-    {#        <script src="//cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>#}
-    {##}
-    {#        <script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>#}
-
     <title>OneApply</title>
 </head>
 <body>
@@ -35,49 +27,60 @@
 
                 <a class="nav-link" href='#'>Profile</a>
                 <a class="nav-link" href="{% url 'landingpage:index' %}">Logout</a>
+
             </div>
         </nav>
-
-        <div class="nav-scroller py-1 mb-2">
-            {% if user_type == constant_ut_student %}
-                <nav class="nav d-flex justify-content-between">
-                    <a class="p-2 text-muted" href="#selected_schools" data-toggle="tab">Selected
-                        Schools</a>
+    </div>
+    <div class="nav-scroller py-1 mb-2">
+        {% if user_type == constant_ut_student %}
+            <nav class="nav d-flex justify-content-between">
+                <div class="nav nav-tabs d-flex justify-content-between" id="dashboard-tab"
+                     role="tablist">
+                    <span class="nav-item nav-link p-2" id="nav-selectedSchools-tab"
+                          data-toggle="tab"
+                          data-url="#nav-selectedSchools" role="tab"
+                          aria-controls="nav-selectedSchools">Selected Schools</span>
                     {# TODO: update this    #}
                     {# this has to be a user object and not a user_type string  #}
-                    <a class="p-2 text-muted active"
-                       href="{% url 'dashboard:high_school:index' 'ut_student' %}"
-                       data-toggle="tab">All Schools</a>
-                    <a class="p-2 text-muted" href="{% url 'dashboard:application:index' user_id %}" data-toggle="tab">Application
-                        Forms</a>
-                    <a class="p-2 text-muted" href="#teacher_recommendations" data-toggle="tab">Teacher
-                        Recommendations</a>
-                </nav>
-            {% elif user_type == constant_ut_adminStaff %}
-                <nav class="nav d-flex">
-                    <a class="p-2 text-muted active" href="{% url 'dashboard:admissions:index'%}" data-toggle="tab">Student
-                        Applications</a>
-                    <a class="p-2 text-muted" href="#school_informations" data-toggle="tab">School
-                        Informations</a>
-                </nav>
-            {% endif %}
-        </div>
+                    <span class="nav-item nav-link p-2" id="nav-allSchools-tab"
+                          data-toggle="tab"
+                          data-url="{% url 'dashboard:high_school:index' 'ut_student' %}"
+                          role="tab" aria-controls="nav-allSchools">All Schools</span>
+                    <span class="nav-item nav-link p-2" id="nav-applications-tab"
+                          data-toggle="tab" data-url="{% url 'dashboard:application:index' user_type user_id %}"
+                          role="tab" aria-controls="nav-applications">Application Forms</span>
+                </div>
+            </nav>
+        {% elif user_type == constant_ut_adminStaff %}
+            <nav class="nav d-flex">
+                <a class="p-2 text-muted active" href="{% url 'dashboard:admissions:index' %}"
+                   data-toggle="tab">Student
+                    Applications</a>
+                <a class="p-2 text-muted" href="#school_informations" data-toggle="tab">School
+                    Informations</a>
+            </nav>
+        {% endif %}
     </div>
     {% if user_type == constant_ut_student %}
-        <div id="myTabContent" class="tab-content">
-            <div class="tab-pane" id="selected_schools">
+        <div class="tab-content" id="dashboardTabContent">
+            <div class="tab-pane fade" id="nav-selectedSchools" role="tabpanel"
+                 aria-labelledby="nav-selectedSchools-tab">
                 <h1>Hello, this is selected schools page</h1>
             </div>
-            <div class="tab-pane active" id="all_schools">
+            <div class="tab-pane fade active" id="nav-allSchools" role="tabpanel"
+                 aria-labelledby="nav-allSchools-tab">
                 {% block all_high_schools %}
+                    All schools
                 {% endblock %}
             </div>
-            <div class="tab-pane" id="application_forms">
-                {% block app_list %}
-              {% endblock %}
+            <div class="tab-pane fade" id="nav-applications" role="tabpanel"
+                 aria-labelledby="nav-applications-tab">
+                {% block all_applications %}
+                    All applications
+                {% endblock %}
             </div>
-            <div class="tab-pane" id="teacher_recommendations">
-                <h1>Hello, this is teacher recommendations page</h1>
+            <div class="tab-pane fade" id="nav-recommendations" role="tabpanel"
+                 aria-labelledby="nav-recommendations-tab">
             </div>
         </div>
     {% elif user_type == constant_ut_adminStaff %}
@@ -91,4 +94,35 @@
     </footer>
 </div>
 </body>
+<!--bootstrap jquery and js-->
+<script src="//cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
+<script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+<script>
+    let toggleTabs = function (selected_tab) {
+        $('.nav-item').removeClass("active");
+        $(this).addClass("active");
+        let tab_target = selected_tab.attr("aria-controls");
+        $('.tab-pane').removeClass("active");
+        $('.tab-pane').removeClass("show");
+        $('#' + tab_target).addClass("active");
+        $('#' + tab_target).addClass("show");
+    };
+
+    $(document).ready(function () {
+        let currentPageUrl = $(location).attr('href'), anchorEl;
+        $('.nav-item').each(function () {
+            anchorEl = $(this).attr('data-url');
+            if (currentPageUrl.indexOf(anchorEl) >= 0) {
+                toggleTabs($(this));
+            }
+        });
+    });
+
+    $('#dashboard-tab span').on('click', function (e) {
+        let selected_tab = $(this);
+        toggleTabs(selected_tab);
+        window.location.href = selected_tab.attr("data-url")
+    })
+</script>
 </html>
