--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -26,7 +26,7 @@
                 </ul>
 
                 <a class="nav-link" href='#'>Profile</a>
-                <a class="nav-link" href="{% url 'landingpage:index' %}">Logout</a>
+                <a class="nav-link" href="{% url 'dashboard:logout' %}">Logout</a>
 
             </div>
         </nav>
