--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -13,7 +13,7 @@
 <div style="display: flex; flex-direction: column; width: 100%; height: 100%;">
     <div class="nav-container">
         <nav class="navbar navbar-expand-md navbar-dark bg-primary mb-4">
-            <a class="navbar-brand" href="#">OneApply</a>
+            <a class="navbar-brand" href="{% url 'dashboard:dashboard' %}">OneApply</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarCollapse" aria-controls="navbarCollapse"
                     aria-expanded="false"
